<resources>
    <string name="warmupHeading">Preparation and Warm-up</string>
    <string name="warmupDesc">Give a score to the following entries pre-competition and during warm-up</string>
    <string name="mentalAreaHeading">Mental Area</string>
    <string name="mentalDesc">Give a score to the following entries.</string>
    <string name="abilitiesAndTechnique">Abilities and Technique</string>
    <string name="physicalAreaHeading">Physical Area</string>
    <string name="physicalDesc">Give a score to the following entries.</string>
    <string name="select_competition">Select Competition</string>
    <string name="app_name">Trainer4</string>
    <string name="strategyHeading">Strategy</string>
    <string name="strategyDesc">Give a score to the following entries.</string>
    <string name="techniqueHeading">Technique &amp; Tactic Area</string>
    <string name="techniqueDesc">Give a score to the following entries.</string>
    <string name="athleteName">Athlete Name</string>
    <string name="category">Category</string>
    <string name="eventName">Event Name</string>
    <string name="eventDate">Date</string>
    <string name="delete">Delete</string>
    <string name="startTyping">Start Typing...</string>
    <string name="energize">TRAINING PLAN</string>
    <string name="yourLife">FOR EXCELLENCE</string>
    <string name="getStart">Get Start</string>
    <string name="signIn">Sign In</string>
    <string name="signUp">Sign Up</string>
    <string name="welcome">Welcome Back!</string>
    <string name="enterDescEmailPass">Enter Your Email And Password to Get Access Your Account.</string>
    <string name="forgotPass">Forgot Password?</string>
    <string name="incorrectEmailPass">Incorrect email or password</string>
    <string name="dontHaveAcc">Don’t have an account yet?</string>
    <string name="register">Register</string>
    <string name="forgotPassword">Forgot Password</string>
    <string name="forgotPassDesc">Enter your Email Address and Got OTP in your email address</string>
    <string name="continueBtn">Continue</string>
    <string name="close">Close</string>
    <string name="checkEmail">Check your mail</string>
    <string name="checkEmailDesc">We Send the forgot password link in this email address</string>
    <string name="invalidEmail">Invalid Email</string>
    <string name="invalidEmailDesc">This email address is not available. Choose a different email address.</string>
    <string name="registerAcc">Register Account</string>
    <string name="startNewAcc">Enter Your User Name And Password to Start Your New Account.</string>
    <string name="alreadyAcc">Already have an account?</string>
    <string name="validUser">Enter Valid Username</string>
    <string name="validEmail">Enter Valid Email</string>
    <string name="validPass">Enter Valid Password</string>
    <string name="addMessocycle">Please Add Messocycle</string>
    <string name="addMicro">Please Add Microcycle</string>
    <string name="validConPass">Enter Valid Confirm Password</string>
    <string name="selectSport">Select Sport</string>
    <string name="sportDesc">First up, Which sport do you enjoy the most?</string>
    <string name="next">Next</string>
    <string name="done">Done</string>
    <string name="addSport">Add Sport</string>
    <string name="addQuality">Add Quality</string>
    <string name="addNewSport">Enter sports name in below field which you want to add</string>
    <string name="addQualityDesc">Enter Quality name in below field which you want to add</string>
    <string name="cancel">Cancel</string>
    <string name="enterSport">Enter Your Sport</string>
    <string name="enterQuality">Enter Quality</string>
    <string name="enterCategory">Enter Category</string>
    <string name="entertemplateName">Enter Template Name</string>
    <string name="profile">Profile</string>
    <string name="editProfile">Edit/Save Profile</string>
    <string name="basicInfo">Basic Information</string>
    <string name="sportInfo">Sport Information</string>
    <string name="premiumVersion">Continue with Premium version</string>
    <string name="freeVersion">Continue with FREE version</string>
    <string name="payNow">Pay Now</string>
    <string name="premiumPlan">Profile Premium Plan</string>
    <string name="monthly">/Monthly</string>
    <string name="basic">Basic</string>
    <string name="trainerPro">Trainer Pro</string>
    <string name="topTrainer">Top Trainer</string>
    <string name="trainFor">TRAIN FOR THE</string>
    <string name="bestPerformance">BEST PERFORMANCE</string>
    <string name="anthropometricData">Anthropometric Data</string>
    <string name="basicDesc">-Scheduling just for yourself.\n-Competition Analysis and P.P (also History)\n-Create lessons and programs just for yourself.\n-Limited Number of Exercise and programs (TBS)\n-Event booking (Lessons, Tests, Competitions, ETC) (Free)\n-Competition Analysis and P.P (only filling in) and Diary (Free)\n-Can join a group through QR Code and see the lessons shared by coach (Free)</string>
    <string name="trainerProDesc">-Create Max 5 Groups and Scheduling.\n-Limited number of Programs and Trainings?\n-Connect Max 50 Athletes? (they can be removed to add new ones)</string>
    <string name="topTrainerDesc">-Unlimited Athletes?\n-Unlimited Groups and Scheduling?\n-Unlimited Programs and Trainings?</string>
    <string name="dailyWorkout">Daily Workout</string>
    <string name="selectGroup">Select Group</string>
    <string name="preSeason">Pre Season</string>
    <string name="enterPreSeason">Enter Pre Season Name</string>
    <string name="nextLesson">Your Next Lesson</string>
    <string name="view">View</string>
    <string name="alert">Alert</string>
    <string name="selectAllGroup">Select All Group</string>
    <string name="selectCetegory">Please Select Cetegory</string>
    <string name="save">Save</string>
    <string name="saveEditData">Save Edit Data</string>
    <string name="addPerformaceProfile">Add To Performance Profile</string>
    <string name="createcustomProfile">Create Custom Profile</string>
    <string name="pleaseSelectSport">Please Select Sport</string>
    <string name="pleaseSelectAthlete">Please Select Athlete</string>
    <string name="pleaseAddSport">Please Add Sport</string>
    <string name="pleaseAddQuality">Please Add Quality</string>
    <string name="pleaseAddCoachScore">Please Add Coach Score</string>
    <string name="pleaseAddAthleteScore">Please Add Athlete Score</string>
    <string name="success">Success</string>
    <string name="dataSaveSuccess">Data Save Successfully</string>
    <string name="pleaseRatingAllFields">Please Rating Coach All Fields</string>
    <string name="pleaseAthleteRatingAllFields">Please Rating Athlete All Fields</string>
    <string name="trainerLogin">Trainer login</string>
    <string name="athletelogin">Athlete login</string>
    <string name="selectAtleastSport">Select Atleast One Sport</string>
    <string name="enterValidBirthDate">Enter Valid Birth Date</string>
    <string name="enterValidBirthPlace">Enter Valid Birth Place</string>
    <string name="enterValidAdd">Enter Valid Address</string>
    <string name="enterValidZipcode">Enter Valid Zipcode</string>
    <string name="apply">Apply</string>
    <string name="create">Create</string>
    <string name="program">Program</string>
    <string name="selectprogram">Select Programs</string>
    <string name="selectedProgram">Selected Programs</string>
    <string name="test">Test</string>
    <string name="events">Events</string>
    <string name="lesson">Lesson</string>
    <string name="exercise">Exercise</string>
    <string name="newProgram">New Program</string>
    <string name="editProgram">Edit Program</string>
    <string name="newLesson">New Lesson</string>
    <string name="createTest">Create Test</string>
    <string name="createEvent">Create Event</string>
    <string name="minute">Minute</string>
    <string name="second">Second</string>
    <string name="hour">Hour</string>
    <string name="selectProgramSection">Select Program Section</string>
    <string name="generalWarmUp">General Warm-up</string>
    <string name="specificWarmUp">Specific Warm-up</string>
    <string name="generalPhysical">General Physical</string>
    <string name="preparationSpecifice">Preparation/Specifice</string>
    <string name="physicalPreparation">Physical Preparation</string>
    <string name="physicalArea">Physical Area</string>
    <string name="techniqueTactic">Technique/Tactic</string>
    <string name="sparring">Sparring</string>
    <string name="okay">Okay</string>
    <string name="coolDown">Cool-down</string>
    <string name="stretching">Stretching</string>
    <string name="createExercise">Create Exercise</string>
    <string name="viewTimer">View Timer</string>
    <string name="loadExercise">Select Exercise</string>
    <string name="exerciseList">Exercise List</string>
    <string name="duplicate">Duplicate</string>
    <string name="viewProgram">View Program</string>
    <string name="selectLessonSection">Select Lesson Section</string>
    <string name="loadProgram">Load Program</string>
    <string name="programList">Program List</string>
    <string name="duplicateLesson">Want you Duplicate the Lesson?</string>
    <string name="duplicateLessonDesc">Are you sure to duplicate \nthe lesson?</string>
    <string name="duplicateProgram">Want you Duplicate the Program?</string>
    <string name="duplicateProgramDesc">Are you sure to duplicate the program?</string>
    <string name="duplicateExercise">Want you Duplicate the Exercise?</string>
    <string name="duplicateExerciseDesc">Are you sure to duplicate the exercise?</string>
    <string name="online">Online</string>
    <string name="viewLesson">View Lesson</string>
    <string name="lessonList">Lesson List</string>
    <string name="confirmAttendance">Confirm Attendance</string>
    <string name="selectSection">Select Section</string>
    <string name="selectProgram">Select Program</string>
    <string name="markAttendance">Mark Attendance</string>
    <string name="selectAllAthlete">Select All Athlete</string>
    <string name="selectAthlete">Select Athletes</string>
    <string name="selectDate">Select Date</string>
    <string name="eventList">Event List</string>
    <string name="testList">Test List</string>
    <string name="loadTest">Load Test</string>
    <string name="logoutmsg">Are you sure you want to Log Out?</string>
    <string name="repeatTxt">Repeat</string>
    <string name="saveEdit">Save Edit</string>
    <string name="general">General</string>
    <string name="specific">Specific</string>
    <string name="selectCategoriesPatterns">Select Categories/Patterns</string>
    <string name="selectEquipment">Select equipment</string>
    <string name="createCycle">Create Cycle</string>
    <string name="editCycle">Edit Cycle</string>
    <string name="cycle">Cycle</string>
    <string name="viewCycle">View Cycle</string>
    <string name="addCycle">Add Cycle</string>
    <string name="pleaseAddCycle">Please Add Cycle</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="editExercise">Edit Exercise</string>
    <string name="viewExercise">View Exercise</string>
    <string name="uploadYourImage">Upload Your Image</string>
    <string name="uploadYourVideo">Upload Your Video</string>
    <string name="roundNo">Round No.</string>
    <string name="timePicker">Time Picker</string>
    <string name="event">Event</string>
    <string name="addAthlete">Add Athlete</string>
    <string name="scanQRCode">Scan QR Code</string>
    <string name="planning">Training Plan</string>
    <string name="timer">Timer</string>
    <string name="scandec">Scan this QR Code and\nJoin Group!</string>
    <string name="enterAbilities">Enter Abilities</string>
    <string name="whichyouwhanttoadd">Enter Abilities name in below field \nwhich you want to add</string>
</resources>