<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/bg_black_round_corner_10"
        android:gravity="center"
        android:padding="@dimen/_6sdp"
        android:orientation="vertical">

    <!-- Title -->
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="8dp"
        android:text="@string/addAthlete"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <!-- Description -->
    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/whichyouwhanttoadd"
        android:textColor="@color/white"
        android:textSize="14sp" />

        <EditText
            android:id="@+id/etAbilities"
            style="@style/Editext_Round_10"
            android:layout_width="@dimen/_230sdp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:background="@drawable/bg_view_trainingpaln_list"
            android:hint="@string/enterAbilities"
            android:padding="5dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_select" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp">

                    <TextView
                        android:id="@+id/btnCancel"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/cancel"
                        android:textColor="@android:color/holo_blue_light"
                        android:textSize="18sp" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/white" />

                    <TextView
                        android:id="@+id/btnAdd"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/add"
                        android:textColor="@android:color/holo_blue_light"
                        android:textSize="18sp" />
                </LinearLayout>

            </LinearLayout>

