<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_select_institution"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/_10sdp">

    <ImageView
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:src="@drawable/frame_forget"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semi_bold"
        android:text="@string/invalidEmail"
        android:textColor="@color/splash_text_color"
        android:textSize="@dimen/_20sdp" />

    <TextView
        android:id="@+id/description_tv"
        android:layout_width="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_12sdp"
        android:fontFamily="@font/poppins_semi_bold"
        android:text="@string/invalidEmailDesc"
        android:textAlignment="center"
        android:textColor="@color/white" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_close"
        android:layout_width="@dimen/_130sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:cardBackgroundColor="@color/splash_text_color"
        app:cardCornerRadius="@dimen/_10sdp"
        android:layout_height="@dimen/_42sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/close"
            android:textSize="@dimen/_18sdp"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_semi_bold"/>

    </androidx.cardview.widget.CardView>

</LinearLayout>