<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/_10sdp"
    android:gravity="center"
    android:background="@drawable/bg_select_institution">


    <ImageView
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:src="@drawable/frame_forget"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/title_forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkEmail"
        android:textColor="@color/splash_text_color"
        android:textSize="@dimen/_20sdp"
        android:fontFamily="@font/poppins_semi_bold"/>


    <TextView
        android:id="@+id/description_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkEmailDesc"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_semi_bold"/>

    <LinearLayout
        android:id="@+id/id_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" email address"
            android:textSize="@dimen/_13sdp"
            android:textColor="@color/white"
            android:visibility="gone"
            android:fontFamily="@font/poppins_semi_bold"/>

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:text="jonedoe123@gmail.com"
            android:textSize="@dimen/_13sdp"
            android:textColor="@color/splash_text_color"
            android:fontFamily="@font/poppins_semi_bold"/>

    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/card_close"
        android:layout_width="@dimen/_130sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:cardBackgroundColor="@color/splash_text_color"
        app:cardCornerRadius="@dimen/_10sdp"
        android:layout_height="@dimen/_42sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/close"
            android:textSize="@dimen/_18sdp"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_semi_bold"/>

    </androidx.cardview.widget.CardView>






</LinearLayout>