<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_black_round_corner_10"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_30sdp"
        android:fontFamily="@font/poppins_semi_bold"
        android:text="@string/scanQRCode"
        android:textColor="@color/white"
        android:textSize="@dimen/_17sdp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:id="@+id/scan_qr"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_150sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_30sdp"/>

        <ProgressBar
            android:id="@+id/progressBarImages"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_centerInParent="true"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/scan_qr"
            app:layout_constraintEnd_toEndOf="@+id/scan_qr"
            app:layout_constraintStart_toStartOf="@+id/scan_qr"
            app:layout_constraintTop_toTopOf="@+id/scan_qr" />


    </RelativeLayout>



    <TextView
        android:layout_width="@dimen/_300sdp"
        android:layout_height="wrap_content"
        android:text="@string/scandec"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="@dimen/_20sdp"
        android:textSize="@dimen/_17sdp"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_semi_bold"/>


    <androidx.cardview.widget.CardView
        android:id="@+id/next_card"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_38sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        app:cardBackgroundColor="@color/splash_text_color"
        app:cardCornerRadius="@dimen/_10sdp">

        <TextView
            android:id="@+id/next_button_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins_semi_bold"
            android:text="@string/close"
            android:textColor="@color/white"
            android:textSize="@dimen/_18sdp"/>

    </androidx.cardview.widget.CardView>


</LinearLayout>